# afagh_emdad_full_django_next_docker

./: .gitignore  Readme.md
app/web/.github/workflows/: Code_Formater.yml
app/web/afagh_emdad/: .env.example  .pylintrc  generate_requirements.py  manage.py  pyproject.toml  requirements.txt
app/web/afagh_emdad/afagh_emdad/: asgi.py  settings.py  urls.py  wsgi.py
